--- a/project/templates/digitalmarketing.html
+++ b/project/templates/digitalmarketing.html
@@ -22,7 +22,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        color: white;
+        color: white; /*add*/
         overflow: hidden;
         padding: 20px 0;
     }
